# DragonScales

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot_instructions.md
.github/workflows/: ci.yml
scripts/: watch_chat_logs.sh
src/dragonscales/: __init__.py  __main__.py  cache.py  config.py  dragon.py  open_router.py  router.py  ui_app.py
tests/: test_cache.py  test_config.py  test_dragon.py  test_main.py  test_open_router.py  test_router.py  test_ui_app.py  test_ui_playwright.py
tests/hypothesis/: test_dragon_properties.py  test_router_properties.py
vault/: config.hcl
