[project]
name = "dragonscales"
version = "0.1.0"
description = "DragonScales application"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.0", "pre-commit>=3.0", "redis>=5.0", "hvac>=2.0", "boto3>=1.34", "bandit>=1.7", "pip-audit>=2.10", "flask>=3.0"]
cache = ["redis>=5.0"]
vault = ["hvac>=2.0"]
moe = ["boto3>=1.34"]
ui = ["flask>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=dragonscales",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=95",
  "-m",
  "not hypothesis",
]
markers = [
  "hypothesis: property-based tests for generative coverage",
]
